# divi-rpc-proxy

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
deploy/: divi-rpc-proxy-mainnet.service  divi-rpc-proxy-testnet.service  haproxy-update.cfg.snippet  install.sh
src/: allowlist.rs  config.rs  main.rs  proxy.rs
