[package]
name = "divi-rpc-proxy"
version = "0.1.2"
edition = "2021"
description = "Filtering RPC proxy for DIVI nodes - allows only safe read-only methods"
authors = ["PrivateDivi"]

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
base64 = "0.22"
clap = { version = "4", features = ["derive", "env"] }
thiserror = "1"

[profile.release]
lto = true
strip = true
opt-level = "z"
